--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -113,7 +113,7 @@
     </h1>
     <br><br>
     <div class="px-5 text-center s1">
-      We have what you need for any occasion, wedding, birthday, corporate gathering, family reunion, or just an special
+      We have what you need for any occasion, wedding, birthday, corporate gathering, family reunion, or just a special
       girls night we cater for all events.
       We offer very competitive prices and high-quality rental equipment.<br><br>
       Being a locally owned business, Luxe Dream Event Hire has everything you'll need for a great party.
