--- a/src/app/fcomponents/gallery/gallery.component.html
+++ b/src/app/fcomponents/gallery/gallery.component.html
@@ -6,7 +6,7 @@
  <!-- Show gallery list -->
  <div class="container">
      <div class="row" *ngIf="galleryList">
-        <div class="col-4" *ngFor="let item of galleryList">
+        <div class="col-12 col-md-4 mb-3" *ngFor="let item of galleryList">
             <div id="carouselExampleControls" class="carousel slide carousel-fade" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item h490 active" *ngFor="let img of item.projectMedia, index as i" [ngClass]="{'active': i == 0}">
@@ -14,7 +14,7 @@
                     </div>
                 </div>
             </div>
-            <div>{{item.description}}</div>
+            <div class="s3 pt-2">{{item.description}}</div>
         </div>
     </div>
 </div>
