--- a/src/app/fcomponents/gallery/gallery.component.html
+++ b/src/app/fcomponents/gallery/gallery.component.html
@@ -10,7 +10,7 @@
             <div id="carouselExampleControls" class="carousel slide carousel-fade" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item h490 active" *ngFor="let img of item.projectMedia, index as i" [ngClass]="{'active': i == 0}">
-                        <img src="http://luxedreameventhire.co.nz:5000/{{img.url}}" class="d-block autofix">
+                        <img src="{{baseImageLink}}{{img.url}}" class="d-block autofix">
                     </div>
                 </div>
             </div>
