--- a/src/app/fcomponents/AdminDialogs/productDialog/productDialog.component.html
+++ b/src/app/fcomponents/AdminDialogs/productDialog/productDialog.component.html
@@ -83,7 +83,7 @@
     <!-- !show images -->
     <div *ngIf="imageList" class="row mb-5" >
         <div *ngFor="let img of imageList" class="ml-3">
-            <img src="http://luxedreameventhire.co.nz:5000/{{img.url}}"><br>
+            <img src="{{baseImageUrl}}{{img.url}}"><br>
             <!-- !delete image -->
             <button type="button" class="btn btn-outline-danger btn-sm mt-2" id="{{img.id}}" (click)="deleteImage(img.id)" *ngIf="!isLoading" [disabled] = "isLoading">Delete</button>
         </div>
