--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -49,7 +49,7 @@
               <div class="row">
                 <div class="col-3" *ngFor="let spe of specials">
                   <div class="h490" *ngIf="spe.productMedia[0]">
-                      <img src="http://luxedreameventhire.co.nz:5000/{{spe.productMedia[0].url}}" [routerLink]="[ '/product/', spe.prodId]">
+                      <img src="{{baseImageLink}}{{spe.productMedia[0].url}}" [routerLink]="[ '/product/', spe.prodId]">
                     </div>
                   <div class="s1">{{spe.title}}</div>
                   <div>
@@ -67,7 +67,7 @@
               <div class="row">
                 <div class="col-6" *ngFor="let spe of specials">
                   <div class="h490" *ngIf="spe.productMedia[0]">
-                    <img src="http://luxedreameventhire.co.nz:5000/{{spe.productMedia[0].url}}" class="img100" [routerLink]="[ '/product/', spe.prodId]">
+                    <img src="{{baseImageLink}}{{spe.productMedia[0].url}}" class="img100" [routerLink]="[ '/product/', spe.prodId]">
                   </div>
                   <div class="s1">{{spe.title}}</div>
                   <div>
