--- a/src/app/fcomponents/products/product/product.component.html
+++ b/src/app/fcomponents/products/product/product.component.html
@@ -36,7 +36,7 @@
           </ol>
         <div #imageContainer class="carousel-inner">
           <div class="carousel-item h490 active" *ngFor="let img of prodMediaUrl, index as i" [ngClass]="{'active': i == 0}">
-              <img #prodImage src="http://luxedreameventhire.co.nz:5000/{{img.url}}" class="d-block autofix">
+              <img #prodImage src="{{baseImageLink}}{{img.url}}" class="d-block autofix">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
