--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -6,9 +6,9 @@
       <div class="col-12 py-2 py-md-4 text-center">
         <!-- <br><br> -->
         <div class="my-2 my-md-3">
-          <i class="fab fa-facebook-square rounded-lg p-3 rounded"></i>
-          <i class="fab fa-instagram rounded-lg p-3 rounded"></i>
-          <i class="far fa-envelope rounded-lg p-3 rounded"></i>
+          <a href="https://www.facebook.com/Luxedream-event-hire-258174978466574/" target="_blank"><i class="fab fa-facebook-square rounded-lg p-3 rounded"></i></a>
+          <a href="https://www.instagram.com/luxedreameventhire/" target="_blank"><i class="fab fa-instagram rounded-lg p-3 rounded"></i></a>
+          <!-- <i class="far fa-envelope rounded-lg p-3 rounded"></i> -->
         </div>
       </div>
     </div>
@@ -53,7 +53,7 @@
             <a href="mailto:luxedreameventhire@gmail.com"><i class="far fa-envelope mr-3"></i> &nbsp; luxedreameventhire@gmail.com</a>
           </li>
           <li class="mt-md-2 pt-2 text-decoration-underline text-white-50">
-            <a href="email:luxedreameventhire@gmail.com"><i class="fas fa-map-marker-alt mr-3"></i> &nbsp; 21 Ashwood Ave, Dairy Flat, Auckland 0792</a>
+            <a href="email:luxedreameventhire@gmail.com"><i class="fas fa-map-marker-alt mr-3"></i> &nbsp; Ashwood Ave, Dairy Flat, Auckland 0792</a>
           </li>
           <li class="mt-md-2 pt-2 text-decoration-underline text-white-50">
             <a href="email:luxedreameventhire@gmail.com"><i class="fab fa-weixin mr-3"></i> &nbsp; Wechat: LuxeDreamEventHire</a>
