--- a/src/app/fcomponents/pages/contactUs/contactUs.component.html
+++ b/src/app/fcomponents/pages/contactUs/contactUs.component.html
@@ -16,7 +16,7 @@
       <div class="l2 mt-5 pb-3">Contact Info</div>
       <div class="row py-2"> 
         <div class="col-12 s2">
-          <img src="../../../../assets/images/locationIcon.jpg" alt="" style="height:26px;width:26px;">&nbsp;&nbsp;&nbsp;&nbsp; 21 Ashwood Ave, Dairy Flat, Auckland 0792
+          <img src="../../../../assets/images/locationIcon.jpg" alt="" style="height:26px;width:26px;">&nbsp;&nbsp;&nbsp;&nbsp; Ashwood Ave, Dairy Flat, Auckland 0792
         </div>
       </div>
       <div class="row py-2">
