--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -113,11 +113,11 @@
     </h1>
     <br><br>
     <div class="px-5 text-center s1">
-      We have what you need for any occasion, wedding, birthday, corporate gathering, family reunion, or just a special
-      girls night we cater for all events.
+      We have what you need for any occasion, wedding, birthday, corporate gathering, family reunion, or just another special
+      event, we have got you covered.
       We offer very competitive prices and high-quality rental equipment.<br><br>
       Being a locally owned business, Luxe Dream Event Hire has everything you'll need for a great party.
-      Our kid-friendly staff delivers to throughout Auckland. Our goal is to become your preferred event rental company.
+      Our kid-friendly staff delivers to throughout Auckland.
       <br>
       <a class="getintouch" style="color:#c48f45" href="" routerLink="/contactUs">Get in touch now for a quote</a> !
     </div>
@@ -178,7 +178,7 @@
           <div class="carousel-item active">
             <h5>Sarah</h5>
             <p style="color:white" class="s1">"Not only are the pieces completely unique and always a focal point at
-              wedding receptions, but the team at Lux Dream are the absolute best to work with. They always deliver and
+              wedding receptions, but the team at Luxe Dream are the absolute best to work with. They always deliver and
               pick up promptly on the day of the event. Emma helps immensely with pre-planning leading up to the event.
               She’s prompt at making revisions to orders and sending over invoices efficiently."
             </p>
