--- a/src/app/fcomponents/admin/admin.component.html
+++ b/src/app/fcomponents/admin/admin.component.html
@@ -59,10 +59,7 @@
 
       <!-- loading -->
       <div class="text-center mt-5 pt-5" *ngIf="isLoading">
-          Loading Data...Please wait
-          <div class="spinner-border text-info ml-2" role="status">
-            <span class="sr-only">Loading...</span>
-          </div>
+        <app-loading></app-loading>
       </div>
 
       <div *ngIf="!isLoading">
@@ -104,7 +101,7 @@
        -->
 
       <!-- !Hire || Service || Package-->
-      <div *ngIf="blockCode == '2' || blockCode == '3' || blockCode == '4'">
+      <!-- <div *ngIf="blockCode == '2' || blockCode == '3' || blockCode == '4'">
         <div class="row mt-3">
           <div class="col-1" *ngIf="blockCode == 2">
             <h2>Hires</h2>
@@ -160,7 +157,7 @@
             </tr>
           </tbody>
         </table>
-      </div>
+      </div> -->
 
       <!-- !Gallery -->
       <div *ngIf="blockCode == '5'">
