--- a/src/app/fcomponents/admin/admin-galleries/admin-galleries.component.html
+++ b/src/app/fcomponents/admin/admin-galleries/admin-galleries.component.html
@@ -1,3 +1,61 @@
-<p>
-  admin-galleries works!
-</p>
+<div>
+  <div class="row mt-3">
+    <div class="col-1">
+      <h2>Gallery</h2>
+    </div>
+    <div class="pt-2 col">
+        <button type="button" class="ml-2" style="border-radius: 5px;" title="Add" (click)="createGallery()">
+          <i class="fas fa-plus"></i>
+          <span>Add</span>
+        </button>
+      </div>
+  </div>
+
+  <div class="accordion mb-4" id="accordionExample">
+    <div class="card eventTypeImageToggle">
+      <div class = "pt-3" id="headingOne">
+        <!-- <h2 class = "mb-0"> -->
+          <button class="btn dropdown-toggle eventTypeImageToggle pl-0" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+            <b>Edit images of event types</b>
+          </button>
+        <!-- </h2> -->
+      </div>
+  
+      <div id="collapseOne" class="collapse hide" aria-labelledby="headingOne" data-parent="#accordionExample">
+        <div class="card-body">
+          <div *ngIf="allEventTypes" class="eventTypeImageEditor">
+            <div *ngFor="let event of allEventTypes" class="eventTypeImageEditorBlocks pt-2">
+              <span class="s2">{{event.eventName}}</span><br>
+              <img *ngIf="event.eventName" src="{{baseImageLink}}{{event.eventTypeImage}}" class="eventTypeImage mr-2">
+              <input #eventImageInput type="file" (change)="onEventTypeImageSelected($event)" class="eventTypeImageEditorTools">
+              <button type="button" class="btn btn-outline-info btn-sm eventTypeImageEditorTools" (click)="onUploadEventTypeImage(event)" [disabled] = "isLoading">upload</button>
+            </div>
+          </div>              
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <table class="table">
+    <thead>
+      <tr class="table-secondary">
+        <th scope="col">Id<br><span>编号</span></th>
+        <th scope="col">Customer<br><span>顾客</span></th>
+        <th scope="col">Event Type<br><span> 活动类别</span></th>
+        <th scope="col">Description<br><span>描述</span></th>
+        <th scope="col">Edit<br><span>编辑</span></th>
+        <th scope="col">Delete<br><span>删除</span></th>
+      </tr>
+    </thead>
+    <tbody *ngIf="displayData">
+      <tr *ngFor="let data of displayData">
+        <td>{{data.prodjectId}}</td>
+        <td>{{data.customerName}}</td>
+        <td *ngIf="data.eventtype">{{data.eventtype.eventName}}</td>
+        <td>{{data.description}}</td>
+        <td><i class="far fa-edit" (click)="openGallery(data)" title="Edit"></i></td>
+        <td><i class="far fa-trash-alt" title="Delete" (click)="deleteGallery(data)"></i></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
