--- a/src/app/fcomponents/admin/admin.component.html
+++ b/src/app/fcomponents/admin/admin.component.html
@@ -160,7 +160,7 @@
       </div> -->
 
       <!-- !Gallery -->
-      <div *ngIf="blockCode == '5'">
+      <!-- <div *ngIf="blockCode == '5'">
         <div class="row mt-3">
           <div class="col-1">
             <h2>Gallery</h2>
@@ -176,11 +176,9 @@
         <div class="accordion mb-4" id="accordionExample">
           <div class="card eventTypeImageToggle">
             <div class = "pt-3" id="headingOne">
-              <!-- <h2 class = "mb-0"> -->
                 <button class="btn dropdown-toggle eventTypeImageToggle pl-0" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                   <b>Edit images of event types</b>
                 </button>
-              <!-- </h2> -->
             </div>
         
             <div id="collapseOne" class="collapse hide" aria-labelledby="headingOne" data-parent="#accordionExample">
@@ -220,7 +218,7 @@
             </tr>
           </tbody>
         </table>
-      </div>
+      </div> -->
 
       <!-- !Faq -->
       <div *ngIf="blockCode == '6'">
