--- a/src/app/fcomponents/admin/admin-products/admin-products.component.html
+++ b/src/app/fcomponents/admin/admin-products/admin-products.component.html
@@ -3,6 +3,7 @@
 </div>
 
 <div>
+  {{productTitle}}
     <div class="row mt-3">
       <div class="col-1" *ngIf="productTypeId === '1'">
         <h2>Hires</h2>
